<resources>
    <string name="name">Név</string>
    <string name="email">Email</string>
    <string name="registration">Regisztráció</string>
    <string name="appName">BumPin</string>
    <string name="confirm_password">Jelszó újra</string>
    <string name="password">Jelszó</string>
    <string name="registrationText">Nincs még fiókod? Regisztrálj!</string>
    <string name="login">Bejelentkezés</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>