<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/registrationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/appName"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:id="@+id/nameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_below="@id/registrationTextView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameField"
            android:layout_marginTop="16dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailField"
            android:layout_marginTop="16dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/confirmPasswordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordField"
            android:layout_marginTop="16dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirmPasswordField"
            android:layout_marginTop="24dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:text="@string/registration"
            android:onClick="register"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
