<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/registrationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/appName"
            android:textSize="30sp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/loginEmailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/registrationTextView"
            android:layout_marginTop="24dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/loginPasswordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginEmailField"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginPasswordField"
            android:layout_marginTop="24dp"
            android:text="@string/login"
            android:onClick="login"/>

        <TextView
            android:id="@+id/registerLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:text="@string/registrationText"
            android:textStyle="bold"
            android:onClick="register"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
